# py-jl-Differential-Equiations

./: .gitignore  Introduction-jl.html  Introduction-jl.ipynb  Introduction-py.html  README.md  README.md.old  index.html  myst.yml  pyproject.toml  pyproject.toml~  requirements.txt
.github/: release.yml
Introduction-py_files/libs/bootstrap/: bootstrap-edae39f48b24f28edf7830090c8eb6ea.min.css
_site/: Introduction-py.html  Introduction.html  index.html  search.json
_site/site_libs/bootstrap/: bootstrap-d39b7d578d64c90337aa9bd9935edd9c.min.css
