[project]
name = "py-ode-leag"
version = "0.1.0"
description = "practices on Python for ODE"
authors = [
    {name = "LuisGorozpe",email = "luis.ascencio@cimat.mx"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython (==8.37.0)",
    "matplotlib (==3.10.8)",
    "numpy (==2.4.2)",
    "scipy (==1.17.0)",
    "session-info (==1.0.1)",
    "sympy (==1.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.2.0,<8.0.0)"
]
